fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ultron/fixturepref",
+  "name": "u1tr0n/fixturepref",
   "description": "Helper for manipulating with fixtures pref's",
   "type": "library",
   "license": "MIT",
