--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "~8.1.0 || ~8.2.0"
+    "php": "^8.1 || ^8.2"
   },
   "require-dev": {
     "lcobucci/coding-standard": "^9.0",
